--- a/css/styles.css
+++ b/css/styles.css
@@ -9850,10 +9850,6 @@ a.text-dark:hover, a.text-dark:focus {
   color: rgba(0, 0, 0, 0.5) !important;
 }
 
-.mast-text {
-  color: rgb(0, 0, 0) !important;
-}
-
 .text-white-50 {
   color: rgba(255, 255, 255, 0.5) !important;
 }
@@ -9990,7 +9986,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #a3fa70;
+  border-color: #ffd331;
 }
 
 hr.light {
@@ -10146,4 +10142,9 @@ header.masthead h1 {
 
 .text-white-75 {
   color: rgba(255, 255, 255, 0.75);
+}
+
+.mast-text {
+  color: #000000 !important;
+  vertical-align: middle;
 }
